# spam-filter

./: .dockerignore  .gitignore  Dockerfile  ML (copy).ipynb  README.md  clf.ipynb  docker-compose.yml  pyproject.toml
notebooks/: clf.ipynb
src/: app.py  inference.py  paths.py  tg_bot.py
src/templates/: index.html
